--- a/app/src/main/res/raw/motion_scene.json5
+++ b/app/src/main/res/raw/motion_scene.json5
@@ -3,56 +3,135 @@
   ConstraintSets: { //2 constraint sets - Start and End
     //1. Start Constraint
     start: {
-      profile_pic: {  // Assigned ID for profile pic, which we'll use in the code for the reference
-        width: 40,
-        height: 40,
+      back_arrow_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
+        width: 24,
+        height: 24,
         start: ['parent', 'start', 16], //Start Constraint => [Constraining to what, where, Margin]
         top: ['parent', 'top', 16], //Top Constraint
         custom: {
-          color: '#08FF04'
+          color: '#FFFFFF'
         }
       },
-      user_name: {  //Text
-        top: ['profile_pic', 'top'],
-        bottom: ['profile_pic', 'bottom'],
-        start: ['profile_pic', 'end', 16],
+      toolbar_text: {
+        top: ['back_arrow_img', 'top'],
+        bottom: ['back_arrow_img', 'bottom'],
+        start: ['back_arrow_img', 'end', 16],
+        custom: {
+          color: '#FFFFFF'
+        }
+      },
+      toolbar_img: {
+        width: 24,
+        height: 24,
+        top: ['back_arrow_img', 'top'],
+        bottom: ['back_arrow_img', 'bottom'],
+        end: ['parent', 'end', 16],
+        custom: {
+          color: '#FFFFFF'
+        }
+      },
+      bg_toolbar_img: {
+        top: ['back_arrow_img', 'top'],
+        bottom: ['back_arrow_img', 'bottom'],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+        custom: {
+          visible: 'gone'
+        }
+      },
+      content_text: {
+        top: ['parent', 'top', -160],
+        bottom: ['back_arrow_img', 'bottom'],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+//        PropertySet: ['visibility', 'gone'],
+        visibilty: 'gone',
+        custom: {
+          color: '#FFFFFF'
+        }
+      },
+      launch_now_button: {
+        top: ['content_text', 'bottom', -100],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+        custom: {
+          visible: 'gone'
+        }
       },
       box: {  //Background
         width: 'spread',  //spread -> is for fill constraints. Like in XML you'd set width/height = '0dp' to let it fill the available area only.
-        height: 'spread',
+        height: 56,
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
-        bottom: ['parent', 'bottom', -16],  //-16 -> for bottom space
+//        bottom: ['parent', 'bottom'],  //-16 -> for bottom space
       }
     },
 
     //2. End Constraint
     end: {
-      profile_pic: {
-        width: 120,
-        height: 120,
-        start: ['parent', 'start'],
-        end: ['parent', 'end'],
-        top: ['parent', 'top', 16],
+      back_arrow_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
+        width: 24,
+        height: 24,
+        start: ['parent', 'start', 16], //Start Constraint => [Constraining to what, where, Margin]
+        top: ['parent', 'top', 16], //Top Constraint
         custom: {
           color: '#FFFFFF'
         }
       },
-      user_name: {  //Text
-        top: ['profile_pic', 'bottom', 16],
-        start: ['parent', 'start'],
-        end: ['parent', 'end']
+      toolbar_img: {
+        width: 56,
+        height: 56,
+        top: ['back_arrow_img', 'top', 12],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+        custom: {
+          color: '#eb0029'
+        }
+      },
+      bg_toolbar_img: {
+        top: ['back_arrow_img', 'top', 32],
+        bottom: ['back_arrow_img', 'bottom'],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+        custom: {
+          visible: 'gone'
+        }
+      },
+      toolbar_text: {
+        top: ['toolbar_img', 'bottom', 16],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+        custom: {
+          color: '#2C3539'
+        }
+      },
+      content_text: {
+        top: ['toolbar_text', 'bottom', 16],
+        start: ['parent', 'start', 16],
+        end: ['parent', 'end', 16],
+//        PropertySet: 'visibility = visible',
+        visibilty: 'visible',
+        custom: {
+          color: '#2C3539'
+        }
+      },
+      launch_now_button: {
+        top: ['content_text', 'bottom'],
+        start: ['content_text', 'start'],
+        end: ['content_text', 'end'],
+        custom: {
+          visible: 'visible'
+        }
       },
       box: {  //Background
-        width: 'spread',
-        height: 'spread',
+        width: 'spread',  //spread -> is for fill constraints. Like in XML you'd set width/height = '0dp' to let it fill the available area only.
+        height: 56,
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
-        bottom: ['parent', 'bottom', -16],  //-16 -> for bottom space
+//        bottom: ['parent', 'bottom'],  //-16 -> for bottom space
       }
-    }
   },
   Transitions: {  //to set transition properties between Start and End point.
     default: {  //we'll have only one transition between Start and End. So we named it as Default. Your choice after all :D
@@ -62,19 +141,24 @@
       keyFrame: {
         KeyAttribute: [ //We define different Attr and how we want this to Animate, during transition for specific composable
           {
-            target: 'profile_pic',
+            target: 'back_arrow_img',
             frames: [0, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 180],
             alpha: [100, 1]
           },
           {
-            target: 'user_name',
+            target: 'toolbar_text',
             frames: [0, 50, 100],
             translationX: [0, 70, 0],
-            visibility: ['visible','invisible','visible'],
+          },
+          {
+            target: 'content_text',
+            frames: [0, 100],
+            visibility: ['gone', 'visible']
           }
-        ]
-      },
+          ],
+        },
+      }
     }
   }
 }
