--- a/app/src/main/res/raw/motion_scene_netflix.json5
+++ b/app/src/main/res/raw/motion_scene_netflix.json5
@@ -67,11 +67,20 @@
         KeyAttributes: [ //We define different Attr and how we want this to Animate, during transition for specific composable
           {
             target: ['content_img'],
-            frames: [0, 10, 30, 50, 70, 100], //For frames we pass a List containing number between 0 - 100
+            frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 10, 20, 50, 15, 0],
             scaleX: [1, 1.1, 1.3, 2, 1.6 ,1],
             scaleY: [1, 1.1, 1.3, 2, 1.6 ,1],
-            translationZ: [0, 10, 20, 50, 80, 100]
+            translationX: [100, 80, 60, 40, 20, 0]
+          },
+          {
+            target: ['collapsing_box'],
+            frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
+          },
+          {
+            target: ['data_content'],
+            frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
+            translationX: [0, 10, 20, 50, 80, 100]
           }
         ],
       },
