--- a/app/src/main/res/raw/motion_scene_netflix.json5
+++ b/app/src/main/res/raw/motion_scene_netflix.json5
@@ -4,8 +4,9 @@
     //1. Start Constraint
     start: {
       collapsing_box: {
-        width: 'spread',
-        height: 70,
+        width: 'parent',
+        height: 120,
+        bottom: ['parent', 'bottom'],
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
@@ -17,13 +18,13 @@
       },
       content_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
         width: 112,
-        height: 136,
-        bottom: ['data_content', 'top', -60], //bottom Constraint => [Constraining to what, where, Margin]
-        start: ['parent', 'start', 16], //start Constraint
+        height: 142,
+        top: ['collapsing_box', 'bottom', -50], //bottom Constraint => [Constraining to what, where, Margin]
+        start: ['collapsing_box', 'start', 16], //start Constraint
       },
       motion_text: {
-        top: ['content_img', 'top'],
-        start: ['content_img', 'end', 16],
+        top: ['collapsing_box', 'bottom'],
+        start: ['collapsing_box', 'end', 16],
         custom: {
           textColor: '#FFFFFF'
         }
@@ -32,26 +33,27 @@
     //2. End Constraint
     end: {
       collapsing_box: {  //Background
-        width: 'spread',  //spread -> is for fill constraints. Like in XML you'd set width/height = '0dp' to let it fill the available area only.
-        height: 300,
+        width: 'parent',  //spread -> is for fill constraints. Like in XML you'd set width/height = '0dp' to let it fill the available area only.
+        height: 400,
+        bottom: ['parent', 'bottom'],
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
       },
       content_img: {  // Assigned ID for content img, which we'll use in the code for the reference
         width: 112,
-        height: 136,
-        bottom: ['data_content', 'top', -60], //bottom Constraint => [Constraining to what, where, Margin]
-        start: ['parent', 'start', 16], //start Constraint
+        height: 142,
+        top: ['collapsing_box', 'bottom', -50], //bottom Constraint => [Constraining to what, where, Margin]
+        start: ['collapsing_box', 'start', 16], //start Constraint
       },
       data_content: {
-        bottom: ['parent', 'bottom'],
-        start: ['parent', 'start'],
-        end: ['parent', 'end']
+        top: ['collapsing_box', 'bottom', 100],
+        start: ['collapsing_box', 'start'],
+        end: ['collapsing_box', 'end']
       },
       motion_text: {
-        start: ['content_img', 'start'],
-        top: ['content_img', 'bottom', 8],
+        start: ['collapsing_box', 'start'],
+        bottom: ['collapsing_box', 'start', 8],
         custom: {
           textColor: '#2B3784'
         }
@@ -69,18 +71,18 @@
             target: ['content_img'],
             frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 10, 20, 50, 15, 0],
-            scaleX: [1, 1.1, 1.3, 2, 1.6 ,1],
-            scaleY: [1, 1.1, 1.3, 2, 1.6 ,1],
-            translationX: [100, 80, 60, 40, 20, 0]
+            alpha: [0, 0.2, 0.5, 0.7, 0.9, 1],
+            translationZ: [-1, -0.5, 0, 0.5, 0.7, 1]
           },
           {
             target: ['collapsing_box'],
             frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
+            translationZ: [1, 0.5, 0, -0.5, -0.7, -1]
           },
           {
             target: ['data_content'],
             frames: [0, 2, 4, 8, 50, 100], //For frames we pass a List containing number between 0 - 100
-            translationX: [0, 10, 20, 50, 80, 100]
+            translationZ: [1, 0.5, 0, -0.5, -0.7, -1]
           }
         ],
       },
