--- a/app/src/main/res/raw/motion_scene_netflix.json5
+++ b/app/src/main/res/raw/motion_scene_netflix.json5
@@ -70,6 +70,8 @@
             target: ['content_img'], //[expanded -> collapsed]
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
+            translationX: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
+            translationY: [0, -8, -16, -24, -32, -40, -48, -56, -64, -72, -80, -72, -64, -56, -48, -40, -32, -24, -16, -8, 0],
             translationZ: [1.0, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.0, -0.1, -0.2, -0.3, -0.4, -0.5, -0.6, -0.7, -0.8, -0.9, -1.0]
           },
           {
