--- a/app/src/main/res/raw/motion_scene_netflix.json5
+++ b/app/src/main/res/raw/motion_scene_netflix.json5
@@ -5,13 +5,14 @@
     start: {
       collapsing_box: {
         width: 'parent',
-        height: 80,
+        height: 200,
         start: ['parent', 'start'],
         end: ['parent', 'end'],
-        top: ['parent', 'top'],
+        bottom: ['parent', 'top', -90],
+        alpha: 0
       },
       data_content: {
-        top: ['collapsing_box', 'bottom', 0],
+        top: ['collapsing_box', 'bottom', 90],
         bottom: ['parent', 'bottom'],
         start: ['parent', 'start'],
         end: ['parent', 'end']
@@ -19,12 +20,12 @@
       content_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
         width: 112,
         height: 142,
-        top: ['data_content', 'top'], //bottom Constraint => [Constraining to what, where, Margin]
+        top: ['parent', 'top', 30], //bottom Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
       },
       motion_text: {
-        top: ['content_img', 'top'],
-        start: ['content_img', 'end', 16],
+        top: ['parent', 'top', 50],
+        end: ['parent', 'end', 80],
         custom: {
           textColor: '#FFFFFF'
         }
@@ -38,21 +39,23 @@
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
+        alpha: 1
       },
       content_img: {  // Assigned ID for content img, which we'll use in the code for the reference
         width: 112,
         height: 142,
         top: ['data_content', 'top', -10], //bottom Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
+//        translationZ: 10
       },
       data_content: {
-        top: ['collapsing_box', 'bottom', 400],
+        top: ['collapsing_box', 'bottom', 200],
         start: ['collapsing_box', 'start'],
         end: ['collapsing_box', 'end']
       },
       motion_text: {
-        start: ['parent', 'start', 16],
         top: ['parent', 'top', 20],
+        start: ['parent', 'start', 16],
         custom: {
           textColor: '#606C38'
         }
@@ -71,12 +74,13 @@
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
             translationX: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
-            translationY: [0, -8, -16, -24, -32, -40, -48, -56, -64, -72, -80, -72, -64, -56, -48, -40, -32, -24, -16, -8, 0],
+            translationY: [0, -10, -20, -30, -40, -50, -60, -70, -80, -90, -100, -90, -80, -70, -60, -50, -40, -30, -20, -10, 0],
             translationZ: [1.0, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.0, -0.1, -0.2, -0.3, -0.4, -0.5, -0.6, -0.7, -0.8, -0.9, -1.0]
           },
           {
             target: ['collapsing_box'],
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
+//            translationZ: [-1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]
           },
           {
             target: ['data_content'],
