--- a/app/src/main/res/raw/motion_scene_minion.json5
+++ b/app/src/main/res/raw/motion_scene_minion.json5
@@ -8,10 +8,11 @@
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         bottom: ['parent', 'top', -90],
+        translationZ: -10,
         alpha: 0
       },
       data_content: {
-        top: ['collapsing_box', 'bottom', 90],
+        top: ['collapsing_box', 'bottom'],
         bottom: ['parent', 'bottom'],
         start: ['parent', 'start'],
         end: ['parent', 'end']
@@ -19,12 +20,12 @@
       content_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
         width: 112,
         height: 152,
-        top: ['parent', 'top', 40], //bottom Constraint => [Constraining to what, where, Margin]
+        top: ['parent', 'top', 100], //bottom Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
       },
       motion_text: {
-        top: ['parent', 'top', 50],
-        end: ['parent', 'end', 50],
+        top: ['parent', 'top', 20],
+        start: ['parent', 'start', 16],
         custom: {
           textColor: '#FFFFFF'
         }
@@ -38,25 +39,26 @@
         start: ['parent', 'start'],
         end: ['parent', 'end'],
         top: ['parent', 'top'],
+        translationZ: -10,
         alpha: 1
       },
       content_img: {  // Assigned ID for content img, which we'll use in the code for the reference
         width: 112,
         height: 152,
-        top: ['data_content', 'top', -10], //bottom Constraint => [Constraining to what, where, Margin]
+        top: ['data_content', 'top', -70], //bottom Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
 //        translationZ: 10
       },
       data_content: {
-        top: ['collapsing_box', 'bottom', 200],
+        top: ['collapsing_box', 'bottom'],
         start: ['collapsing_box', 'start'],
         end: ['collapsing_box', 'end']
       },
       motion_text: {
-        top: ['parent', 'top', 20],
-        start: ['parent', 'start', 16],
+        bottom: ['collapsing_box', 'bottom', 10],
+        end: ['parent', 'end', 50],
         custom: {
-          textColor: '#606C38'
+          textColor: '#FFFFFF'
         }
       }
     }
@@ -69,12 +71,12 @@
       KeyFrames: {
         KeyAttributes: [ //We define different Attr and how we want this to Animate, during transition for specific composable
           {
-            target: ['content_img'], //[expanded -> collapsed]
+            target: ['content_img'], //[collapsed -> expanded]
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
-            rotationZ: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
-            translationX: [0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 72, 64, 56, 48, 40, 32, 24, 16, 8, 0],
-            translationY: [0, -10, -20, -30, -40, -50, -60, -70, -80, -90, -100, -90, -80, -70, -60, -50, -40, -30, -20, -10, 0],
-            translationZ: [1.0, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.0, -0.1, -0.2, -0.3, -0.4, -0.5, -0.6, -0.7, -0.8, -0.9, -1.0]
+            rotationZ: [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90, 81, 72, 63, 54, 45, 36, 27, 18, 9, 0],  //For dangling effect
+            translationX: [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90, 81, 72, 63, 54, 45, 36, 27, 18, 9, 0],
+            translationY: [0, -14, -28, -42, -56, -70, -84, -98, -112, -126, -130, -126, -112, -98, -84, -70, -56, -42, -28, -14, 0],
+            translationZ: [-1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0] //1 => ,-1 =>
           },
           {
             target: ['collapsing_box'],
@@ -83,7 +85,7 @@
           {
             target: ['data_content'],
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
-            translationZ: [-1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]
+            translationY: [110, 98, 92, 87, 80, 75, 70, 65, 60, 55, 50, 45, 40, 35, 30, 25, 20, 15, 10, 5, 2],
           }
         ],
       },
