--- a/app/src/main/res/raw/motion_scene_minion.json5
+++ b/app/src/main/res/raw/motion_scene_minion.json5
@@ -18,18 +18,19 @@
         end: ['parent', 'end']
       },
       content_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
-        width: 112,
-        height: 152,
+        width: 120,
+        height: 162,
         top: ['parent', 'top', 100], //bottom Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
       },
       motion_text: {
-        top: ['parent', 'top', 20],
+        top: ['parent', 'top', 30],
         start: ['parent', 'start', 16],
         custom: {
-          textColor: '#FFFFFF'
+          textColor: '#f5f5f5',
+          textSize: 24
         }
-      }
+      },
     },
     //2. Expanded
     end: {
@@ -43,10 +44,10 @@
         alpha: 1
       },
       content_img: {  // Assigned ID for content img, which we'll use in the code for the reference
-        width: 112,
-        height: 152,
+        width: 120,
+        height: 162,
         top: ['data_content', 'top', -70], //bottom Constraint => [Constraining to what, where, Margin]
-        start: ['parent', 'start', 16], //start Constraint
+        start: ['parent', 'start', 4], //start Constraint
 //        translationZ: 10
       },
       data_content: {
@@ -56,9 +57,10 @@
       },
       motion_text: {
         bottom: ['collapsing_box', 'bottom', 10],
-        end: ['parent', 'end', 50],
+        start: ['content_img', 'end', 2],
         custom: {
-          textColor: '#FFFFFF'
+          textColor: '#e4000f',
+          textSize: 16
         }
       }
     }
