--- a/app/src/main/res/raw/motion_scene_mario.json5
+++ b/app/src/main/res/raw/motion_scene_mario.json5
@@ -20,7 +20,7 @@
       content_img: {  // Assigned ID for profile pic, which we'll use in the code for the reference
         width: 90,
         height: 142,
-        top: ['parent', 'top', 100], //bottom Constraint => [Constraining to what, where, Margin]
+        top: ['parent', 'top', 100], //top Constraint => [Constraining to what, where, Margin]
         start: ['parent', 'start', 16], //start Constraint
       },
       motion_text: {
@@ -92,18 +92,14 @@
       to: 'end',
       pathMotionArc: 'startHorizontal', // Text will move down with slight circular arc
       KeyFrames: {
-        KeyAttributes: [ //We define different Attr and how we want this to Animate, during transition for specific composable
+        KeyAttributes: [ //We define different Attr and how we want this to Animate, during transition for a specific composable
           {
             target: ['content_img'], //[collapsed -> expanded]
             frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
             rotationZ: [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90, 81, 72, 63, 54, 45, 36, 27, 18, 9, 0],  //For dangling effect
             translationX: [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90, 81, 72, 63, 54, 45, 36, 27, 18, 9, 0],
             translationY: [0, -14, -28, -42, -56, -70, -84, -98, -112, -126, -130, -126, -112, -98, -84, -70, -56, -42, -28, -14, 0],
-            translationZ: [-1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.0, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1] //1 => ,-1 =>
-          },
-          {
-            target: ['collapsing_box'],
-            frames: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100], //For frames we pass a List containing number between 0 - 100
+            translationZ: [-1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, 0.0, 0.0, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
           },
           {
             target: ['data_content'],
