--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,23 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+/.gradle/5.4.1/javaCompile/taskHistory.bin
+
+/keystore.properties
+/.idea
+/buildSrc/buildSrc.iml
+/app/build
+/app/.idea
+gradlew.bat
+gradlew
+/app/gradle
+/app/local.properties
+misc.xml
+/buildSrc/build
+/vcs.xml
+/app/release
+/app/staging
+/buildConfigKeys.properties
+/app/schemas
+*.jks
